# WCAGproject

./: .env.template  .gitignore  CLAUDE.md  NOW.md  benchmark_results.json  benchmark_results.md  benchmark_results_honest.json  benchmark_results_honest.md  pyproject.toml
docs/: benchmark-report.md  data_schema.md  production-readiness-audit.md
docs/archive/: a11y-remediation-project-plan-v2.md
docs/benchmark_results/: remediation_benchmark_results.json  remediation_benchmark_results.md  remediation_benchmark_results_with_verapdf.md  ua_fixes_results.json  ua_fixes_results.md
docs/experiments/: 2026-04-25-strategy-mapper-comparison.md  2026-04-25-tikz-rebench-3-1-flash-lite.md  (+2 more)
scripts/: Caddyfile  a11y-remediate.service  apply_ua_fixes.py  bench_ocr_vendor.py  bench_tikz_vendor.py  benchmark.py  comprehension_smoke.py  deploy.sh  migrate_sqlite_to_postgres.py  oci_retry_launch.sh  remediation_benchmark.py  run_arq_worker.py  strategy_mapper_experiment.py  struct_tree_probe.py  test_batch.py  test_mistral_ocr.py  verapdf_postprocess.py
src/: cli.py
tests/: conftest.py  test_alt_text.py  test_arq_smoke.py  test_auth.py  test_axe_checker.py  test_billing.py  test_concurrency_config.py  test_contrast.py  test_cost_cap.py  test_db_abstraction.py  test_email.py  test_executor.py  test_gemini_html.py  test_headings.py  test_html_builder.py  test_html_to_pdf.py  test_image_extract.py  test_itext_tagger.py  test_latex_parser.py  test_links.py  test_lists.py  test_math_descriptions.py  test_math_renderer.py  test_metadata.py  test_mistral_parser.py  test_models.py  test_observability.py  test_orchestrator_dedup.py  test_parser.py  test_pdf_bbox.py  test_pdf_output.py  test_pdf_parser.py  test_pdf_writer.py  test_pipeline_models.py  test_postgres_smoke.py  test_pptx_parser.py  test_queue.py  test_rate_limit.py  test_report_generator.py  test_retention.py  (+9 more)
(+114 files in other folders)
